# docs/swagger.json
@@ -18,6 +18,11 @@
     "paths": {
         "/api/generation-requests/": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Возвращает список заявок пользователя с фильтрацией по дате и статусу (кроме удаленных и черновиков)",
                 "consumes": [
                     "application/json"
@@ -84,6 +89,11 @@
         },
         "/api/generation-requests/draft/": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Возвращает информацию о черновике заявки текущего пользователя",
                 "consumes": [
                     "application/json"
@@ -102,15 +112,6 @@
                             "$ref": "#/definitions/ds.GenerationRequest"
                         }
                     },
-                    "404": {
-                        "description": "Черновик не найден",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
                     "500": {
                         "description": "Внутренняя ошибка сервера",
                         "schema": {
@@ -123,6 +124,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Обновляет поля черновика заявки текущего пользователя",
                 "consumes": [
                     "application/json"
@@ -191,6 +197,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Удаляет черновик заявки текущего пользователя",
                 "consumes": [
                     "application/json"
@@ -229,6 +240,11 @@
         },
         "/api/generation-requests/draft/submit/": {
             "put": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Формирует черновик заявки и отправляет на рассмотрение",
                 "consumes": [
                     "application/json"
@@ -273,6 +289,11 @@
         },
         "/api/generation-requests/draft/{turbineId}/": {
             "put": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Обновляет параметры (avg_velocity, alpha) турбины в черновике",
                 "consumes": [
                     "application/json"
@@ -342,6 +363,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Добавляет турбину в черновик заявки текущего пользователя",
                 "consumes": [
                     "application/json"
@@ -402,6 +428,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Удаляет турбину из черновика заявки текущего пользователя",
                 "consumes": [
                     "application/json"
@@ -464,6 +495,11 @@
         },
         "/api/generation-requests/{generationRequestId}/": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Возвращает информацию о конкретной заявке с деталями и связанными турбинами",
                 "consumes": [
                     "application/json"
@@ -523,6 +559,11 @@
         },
         "/api/generation-requests/{generationRequestId}/close/": {
             "put": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Модератор завершает или отклоняет заявку (только для модераторов)",
                 "consumes": [
                     "application/json"
@@ -650,6 +691,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Создает новую турбину без изображения",
                 "consumes": [
                     "application/json"
@@ -759,6 +805,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Обновляет информацию о турбине по ID",
                 "consumes": [
                     "application/json"
@@ -834,6 +885,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Удаляет турбину по ID",
                 "consumes": [
                     "application/json"
@@ -890,6 +946,11 @@
         },
         "/api/turbines/{turbineId}/upload-image/": {
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Добавляет или обновляет изображение для турбины",
                 "consumes": [
                     "multipart/form-data"
@@ -965,6 +1026,11 @@
         },
         "/api/users/": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Возвращает информацию о текущем аутентифицированном пользователе",
                 "consumes": [
                     "application/json"
@@ -995,6 +1061,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Обновляет информацию о текущем аутентифицированном пользователе",
                 "consumes": [
                     "application/json"
@@ -1132,26 +1203,28 @@
                     "200": {
                         "description": "Сообщение об успешной аутентификации",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/api.Login.Res"
                         }
                     },
                     "400": {
-                        "description": "Некорректные учетные данные",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
+                        "description": "Некорректные учетные данные"
+                    },
+                    "403": {
+                        "description": "Доступ запрещен"
+                    },
+                    "500": {
+                        "description": "Ошибка сервера"
                     }
                 }
             }
         },
         "/api/users/logout/": {
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Завершает сессию текущего аутентифицированного пользователя",
                 "consumes": [
                     "application/json"
@@ -1190,6 +1263,20 @@
                         "completed",
                         "rejected"
                     ]
+                }
+            }
+        },
+        "api.Login.Res": {
+            "type": "object",
+            "properties": {
+                "access_token": {
+                    "type": "string"
+                },
+                "expires_in": {
+                    "type": "integer"
+                },
+                "token_type": {
+                    "type": "string"
                 }
             }
         },
@@ -1403,6 +1490,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "JWT": {
+            "description": "Префикс \"Bearer\" с последующими пробелом и JWT.",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
