# internal/app/api/turbines.go
@@ -4,6 +4,7 @@ import (
 	"errors"
 	"net/http"
 	"rip/internal/app/ds"
+	"rip/internal/app/middlewares"
 	"rip/internal/app/repositories"
 	"rip/internal/app/services"
 	"strconv"
@@ -13,23 +14,23 @@ import (
 )
 
 type TurbinesApi struct {
-	turbinesService *services.TurbinesService
+	s *services.TurbinesService
 }
 
-func NewTurbinesApi(turbinesService *services.TurbinesService) *TurbinesApi {
+func NewTurbinesApi(s *services.TurbinesService) *TurbinesApi {
 	return &TurbinesApi{
-		turbinesService: turbinesService,
+		s: s,
 	}
 }
 
-func (api *TurbinesApi) RegisterEndpoints(router *gin.RouterGroup) {
-	router.GET("/", api.GetTurbines)
+func (a *TurbinesApi) RegisterEndpoints(r *gin.RouterGroup, m *middlewares.UserMiddlewares) {
+	r.GET("/", a.GetTurbines)
 
-	router.POST("/", api.CreateTurbine)
-	router.GET("/:turbineId", api.GetTurbine)
-	router.PUT("/:turbineId", api.UpdateTurbine)
-	router.POST("/:turbineId/upload-image", api.UploadTurbineImage)
-	router.DELETE("/:turbineId", api.DeleteTurbine)
+	r.POST("/", m.WithModeratorAccess, a.CreateTurbine)
+	r.GET("/:turbineId", a.GetTurbine)
+	r.PUT("/:turbineId", m.WithModeratorAccess, a.UpdateTurbine)
+	r.POST("/:turbineId/upload-image", m.WithModeratorAccess, a.UploadTurbineImage)
+	r.DELETE("/:turbineId", m.WithModeratorAccess, a.DeleteTurbine)
 }
 
 // @Summary Список турбин с фильтрацией
@@ -41,7 +42,7 @@ func (api *TurbinesApi) RegisterEndpoints(router *gin.RouterGroup) {
 // @Success 200 {array} ds.Turbine "Список турбин"
 // @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
 // @Router /api/turbines/ [get]
-func (api *TurbinesApi) GetTurbines(ctx *gin.Context) {
+func (a *TurbinesApi) GetTurbines(ctx *gin.Context) {
 	titleFilter := func() *string {
 		titleFilterValue := ctx.Query("turbineTitle")
 		if titleFilterValue != "" {
@@ -50,7 +51,7 @@ func (api *TurbinesApi) GetTurbines(ctx *gin.Context) {
 		return nil
 	}()
 
-	turbines, err := api.turbinesService.GetActiveTurbines(titleFilter)
+	turbines, err := a.s.GetActiveTurbines(titleFilter)
 	if err != nil {
 		ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
 		return
@@ -70,14 +71,14 @@ func (api *TurbinesApi) GetTurbines(ctx *gin.Context) {
 // @Failure 422 {object} map[string]string "Некорректный ID турбины"
 // @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
 // @Router /api/turbines/{turbineId}/ [get]
-func (api *TurbinesApi) GetTurbine(ctx *gin.Context) {
+func (a *TurbinesApi) GetTurbine(ctx *gin.Context) {
 	turbineId, err := strconv.Atoi(ctx.Param("turbineId"))
 	if err != nil {
 		ctx.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"message": err.Error()})
 		return
 	}
 
-	turbine, err := api.turbinesService.GetActiveTurbine(uint(turbineId))
+	turbine, err := a.s.GetActiveTurbine(uint(turbineId))
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{"message": err.Error()})
@@ -99,8 +100,9 @@ func (api *TurbinesApi) GetTurbine(ctx *gin.Context) {
 // @Success 201 {object} ds.Turbine "Созданная турбина"
 // @Failure 400 {object} map[string]string "Некорректный запрос"
 // @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
+// @Security JWT
 // @Router /api/turbines/ [post]
-func (api *TurbinesApi) CreateTurbine(ctx *gin.Context) {
+func (a *TurbinesApi) CreateTurbine(ctx *gin.Context) {
 	turbine := ds.CreateTurbine{}
 
 	if err := ctx.Bind(&turbine); err != nil {
@@ -108,7 +110,7 @@ func (api *TurbinesApi) CreateTurbine(ctx *gin.Context) {
 		return
 	}
 
-	createdTurbine, err := api.turbinesService.CreateTurbine(turbine)
+	createdTurbine, err := a.s.CreateTurbine(turbine)
 	if err != nil {
 		ctx.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"message": err.Error()})
 		return
@@ -129,8 +131,9 @@ func (api *TurbinesApi) CreateTurbine(ctx *gin.Context) {
 // @Failure 404 {object} map[string]string "Турбина не найдена"
 // @Failure 422 {object} map[string]string "Некорректный ID турбины"
 // @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
+// @Security JWT
 // @Router /api/turbines/{turbineId}/ [put]
-func (api *TurbinesApi) UpdateTurbine(ctx *gin.Context) {
+func (a *TurbinesApi) UpdateTurbine(ctx *gin.Context) {
 	turbine := ds.UpdateTurbine{}
 	if err := ctx.Bind(&turbine); err != nil {
 		ctx.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"message": err.Error()})
@@ -143,7 +146,7 @@ func (api *TurbinesApi) UpdateTurbine(ctx *gin.Context) {
 		return
 	}
 
-	updatedTurbine, err := api.turbinesService.UpdateTurbine(uint(turbineId), turbine)
+	updatedTurbine, err := a.s.UpdateTurbine(uint(turbineId), turbine)
 	if err != nil {
 		if errors.Is(err, repositories.ErrorTurbineIsDeleted) {
 			ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{"message": err.Error()})
@@ -168,15 +171,16 @@ func (api *TurbinesApi) UpdateTurbine(ctx *gin.Context) {
 // @Failure 404 {object} map[string]string "Турбина не найдена"
 // @Failure 422 {object} map[string]string "Некорректный ID турбины"
 // @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
+// @Security JWT
 // @Router /api/turbines/{turbineId}/upload-image/ [post]
-func (api *TurbinesApi) UploadTurbineImage(ctx *gin.Context) {
+func (a *TurbinesApi) UploadTurbineImage(ctx *gin.Context) {
 	turbineId, err := strconv.Atoi(ctx.Param("turbineId"))
 	if err != nil {
 		ctx.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"message": err.Error()})
 		return
 	}
 
-	_, err = api.turbinesService.GetActiveTurbine(uint(turbineId))
+	_, err = a.s.GetActiveTurbine(uint(turbineId))
 	if err != nil {
 		ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{"message": err.Error()})
 		return
@@ -187,7 +191,7 @@ func (api *TurbinesApi) UploadTurbineImage(ctx *gin.Context) {
 		return
 	}
 
-	updatedTurbine, err := api.turbinesService.UpdateTurbineImage(
+	updatedTurbine, err := a.s.UpdateTurbineImage(
 		uint(turbineId),
 		ctx.Request.Body,
 		ctx.Request.ContentLength,
@@ -211,15 +215,16 @@ func (api *TurbinesApi) UploadTurbineImage(ctx *gin.Context) {
 // @Failure 404 {object} map[string]string "Турбина не найдена"
 // @Failure 422 {object} map[string]string "Некорректный ID турбины"
 // @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
+// @Security JWT
 // @Router /api/turbines/{turbineId}/ [delete]
-func (api *TurbinesApi) DeleteTurbine(ctx *gin.Context) {
+func (a *TurbinesApi) DeleteTurbine(ctx *gin.Context) {
 	turbineId, err := strconv.Atoi(ctx.Param("turbineId"))
 	if err != nil {
 		ctx.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"message": err.Error()})
 		return
 	}
 
-	if err := api.turbinesService.DeleteTurbine(uint(turbineId)); err != nil {
+	if err := a.s.DeleteTurbine(uint(turbineId)); err != nil {
 		if errors.Is(err, repositories.ErrorTurbineIsDeleted) {
 			ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{"message": err.Error()})
 			return
